# rust-class

./: Cargo.toml  README.md
crates/oop_inheritance/: Cargo.toml
crates/oop_inheritance/src/: lib.rs  util.rs
crates/oop_inheritance_proc/: Cargo.toml
crates/oop_inheritance_proc/src/: lib.rs
