[package]
name = "oop_inheritance_proc"
version = "1.0.0"
edition = "2021"
authors = ["hydroper <matheusdiasdesouzads@gmail.com>"]
repository = "https://github.com/hydroper/rust-oop-inheritance"
license = "MIT OR Apache-2.0"
description = "Rust object-oriented inheritance"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1", features = ["nightly"] }
quote = "1"
syn = { version = "2.0.38", features = ["full"] }